# solar-tea

./: .coverage  .gitignore  README.md  equipment_db.py  inspect_modules_db.py  main.py  pv_generation.py  pyproject.toml  requirements.txt  roof_sizing.py
customization/: pv_equipments.py
data/: SandiaMod.csv
data/consumption/: 20251212_consumption-frq-15min-leap-yr.csv  20251212_consumption-frq-15min.csv  20251212_consumption-frq-60min-leap-yr.csv  20251212_consumption-frq-60min.csv
data/equipments/: CECInverter.csv  battery_technologies.json  solar_modules.json
docs/: battery.md  pronovo-subsidy-calculation.md  pv-metrics-explained.md  pvtariff.md  roof-capacity-calculation.md  swissolar.xlsx
docs/scripts/: calculate_OM.py  calculate_feedin.py  calculate_investment.py  calculate_leg.py  calculate_zev.py  demo_calculate_OM.py  demo_calculate_feedin.py  demo_calculate_investment.py  demo_calculate_leg.py  demo_calculate_zev.py  demo_pronovo.py  demo_tariff_service.py  financial_analysis.py  interactive_tariff_history.py  pronovo_subsidy_service.py  tariff_service.py  tarrif-lookup.py
eclipse/: equipment_logic.py  pv_generation.py  pvlib_1.py  roof_sizing.py
eclipse/battery/: __init__.py  defaults.py  pysam.py  simple.py  (+2 more)
examples/: 00-energy-sizer.py  00-equipments.py  01-energy-sizer.py  01-equipments.py  01-module-degradation.py  01-module.py  02-consumption-analysis.py  02-simplified-access.py  03-default-module.py  03a-pvlib-sizer.py  03b-pvlib-roof-based-sizing.py  04-battery-operation-day.py  04-battery-pysam.py  04a-battery-operation-day.py  04b-battery-sizing.py  04c-simulator-comparison.py  05-battery-optimization.py  05a-system-sizing.py  05b-battery-comparison.py  06-verify-battery-capacity.py  06_full_simulation.py  06a_synthetic_system_economic.py  07-consumption-analysis.py  08-custom-date-range.py  09-consumption-data-oop.py  10-pv-system-sizing.py  11-pv-battery-sizing.py  13-ultimate-pv-battery-optimization.py  14-optimization-module-demo.py  Untitled-1.py
src/: analysis-consumption.py  battery_pysam.py  battery_sizing.py  equipment_db.py  equipment_logic.py  equipment_models.py  pv_generation.py  roof_sizing.py
tests/: conftest.py  test_battery_physics.py  test_consumption_data.py  test_consumption_plotter.py  test_integration.py  test_pv_physics.py  test_seasonal_accessor.py  test_time_series_accessor.py
(+75 files in other folders)
