[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-tea"
version = "0.1.0"
description = "A comprehensive Python tool for sizing Solar PV systems and Batteries for Swiss residential scenarios"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mahmoud Hefny", email = "mhefny@enerphy-suisse.ch"}
]
keywords = [
    "solar",
    "pv",
    "photovoltaic",
    "battery",
    "sizing",
    "energy",
    "pvlib",
    "pysam"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pvlib>=0.10",
    "nrel-pysam>=5.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
spyder = [
    "spyder-kernels>=2.4",
]
optimization = [
    "pymoo>=0.6",           # NSGA-II multi-objective optimization
    "pulp>=2.7",            # MILP linear programming
]
economics = [
    "numpy-financial>=1.0", # NPV, IRR calculations
]
all = [
    "solar-tea[dev,spyder,optimization,economics]",
]

[project.urls]
Homepage = "https://github.com/hefnymah/solar-tea"
Repository = "https://github.com/hefnymah/solar-tea.git"
Issues = "https://github.com/hefnymah/solar-tea/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["eclipse*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
